--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,26 @@
 asgiref==3.5.2
+Babel==2.11.0
 certifi @ file:///C:/ci/certifi_1655889035820/work/certifi
+charset-normalizer==2.1.1
 crispy-tailwind==0.5.0
-Django==3.0.6
+Django==4.1.4
+django-autoslug==1.9.8
 django-ckeditor==6.5.1
+django-countries==7.5
 django-crispy-forms==1.14.0
+django-embed-video==1.4.8
 django-js-asset==2.0.0
 django-multiselectfield==0.1.12
+django-phonenumber-field==7.0.1
+idna==3.4
+phonenumbers==8.13.2
+phonenumberslite==8.13.3
 Pillow==9.3.0
 python-decouple==3.6
 pytz==2022.6
+requests==2.28.1
 sqlparse==0.4.3
+typing_extensions==4.4.0
 tzdata==2022.7
+urllib3==1.26.13
 wincertstore==0.2
